--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "ng": "ng",
         "build": "ng build",
         "lint": "ng lint",
-        "workshop": "ts-node ./workshop-cli"
+        "workshop": "ts-node ./workshop-cli",
+        "start": "cross-env UPLOAD_PATH=./upload NODE_ENV='production' node server/server.js"
     },
     "private": true,
     "dependencies": {
@@ -38,6 +39,7 @@
         "ngx-uploader": "^2.2.5",
         "object-fit-images": "^3.1.3",
         "passport": "^0.3.2",
+        "passport-local": "^1.0.0",
         "passport-remember-me": "0.0.1",
         "randomstring": "^1.1.5",
         "rxjs": "^5.2.0",
