--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ngx-uploader": "^2.2.5",
     "object-fit-images": "^3.1.3",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
     "randomstring": "^1.1.5",
     "rxjs": "^5.2.0",
