--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/flex-layout": "angular/flex-layout-builds",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "angular/material2-builds",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "^6.0.3",
+    "@angular/cdk": "^6.2.0",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/flex-layout": "^5.0.0-beta.14",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/material": "^6.2.0",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/router": "^6.0.3",
     "basscss": "^8.0.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
@@ -43,22 +44,35 @@
     "passport-local": "^1.0.0",
     "passport-remember-me": "0.0.1",
     "randomstring": "^1.1.5",
-    "rxjs": "^5.2.0",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
     "socket.io": "^1.7.3",
-    "zone.js": "^0.8.5"
+    "tslib": "^1.9.2",
+    "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0",
     "@angular/compiler-cli": "^4.0.0",
     "@types/jasmine": "2.5.46",
     "@types/node": "~7.0.12",
+    "angular2-template-loader": "^0.6.2",
+    "browser-sync": "^2.24.4",
     "codelyzer": "~2.0.0",
     "cross-env": "^4.0.0",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-sass": "^4.0.1",
+    "gulp-util": "^3.0.8",
+    "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.11.0",
+    "progress-bar-webpack-plugin": "^1.11.0",
+    "raw-loader": "^0.5.1",
     "simple-git": "^1.69.0",
     "simple-terminal-menu": "^1.1.3",
+    "ts-loader": "^4.3.0",
     "ts-node": "~3.0.2",
     "tslint": "^4.5.1",
-    "typescript": "^2.2.2"
+    "typescript": "^2.2.2",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.0"
   }
 }
