--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "basscss": "^8.0.2",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.1",
+    "bootstrap-utilities": "^4.0.0",
     "chatzz": "^1.1.5",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
@@ -38,7 +39,7 @@
     "multer": "^1.3.0",
     "mv": "^2.1.1",
     "ng2-bootstrap": "^1.6.2",
-    "ngx-uploader": "^2.2.5",
+    "ngx-uploader": "^6.0.1",
     "object-fit-images": "^3.1.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
@@ -51,12 +52,10 @@
     "zone.js": "^0.8.12"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^4.0.0",
-    "@types/jasmine": "2.5.46",
-    "@types/node": "~7.0.12",
+    "@angular-devkit/build-angular": "~0.6.5",
+    "@angular/cli": "^6.0.5",
     "angular2-template-loader": "^0.6.2",
     "browser-sync": "^2.24.4",
-    "codelyzer": "~2.0.0",
     "cross-env": "^4.0.0",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
@@ -69,10 +68,24 @@
     "simple-git": "^1.69.0",
     "simple-terminal-menu": "^1.1.3",
     "ts-loader": "^4.3.0",
-    "ts-node": "~3.0.2",
     "tslint": "^4.5.1",
-    "typescript": "^2.2.2",
     "webpack": "^4.10.2",
-    "webpack-cli": "^3.0.0"
+    "webpack-cli": "^3.0.0",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/language-service": "^6.0.3",
+    "@types/jasmine": "~2.8.6",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.2.1",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~1.7.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~1.4.2",
+    "karma-jasmine": "~1.1.1",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.3.0",
+    "ts-node": "~5.0.1",
+    "typescript": "~2.7.2"
   }
 }
