--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "multer": "^1.3.0",
     "mv": "^2.1.1",
     "ng2-bootstrap": "^1.6.2",
+    "ngx-avatar": "^2.9.0",
     "ngx-uploader": "^6.0.1",
     "object-fit-images": "^3.1.3",
     "passport": "^0.3.2",
